@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.324" hostname="unknown" timestamp="2015-03-27T13:16:22">
+<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.33" hostname="unknown" timestamp="2015-03-27T13:32:51">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[(no message available)
@@ -93,8 +93,7 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_ou
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_object">
     <failure><![CDATA[Data not equal:
-  Expected : 
-Time Series Object: unnamed
+  Expected : Time Series Object: unnamed
 
 Time vector characteristics
 
@@ -107,11 +106,7 @@ Data characteristics
       Interpolation method  linear
       Size                  [1   1  12]
       Data type             double
-
-
-
-  Actual   : 
-Time Series Object: unnamed
+  Actual   : Time Series Object: unnamed
 
 Time vector characteristics
 
